# opengin-ingestion

./: .gitignore  404.html  DEVELOPER.md  README.md  index.html  markdown-page.html  sitemap.xml
docs/: docusaurus.config.js  intro.html  package-lock.json  quickstart.html
p1/: package-lock.json  package.json
prototype/: jest.config.js  (+2 more)
python/: .flake8  .gitignore  Makefile  README.md  available_models.txt  environment.yml  pyproject.toml  sample.txt  test_client_simple.py  verify_pipeline.py
python/examples/extragzt/: README.md  prompt.txt  tabular_extragzt_extract_sample.py
python/integration_tests/: conftest.py  test_cli_gzt_integration.py  test_cli_integration.py  test_lib_integration.py
python/integration_tests/validation_data/: cli_advanced_golden.json  cli_simple_golden.json  gzt_script_golden.json  lib_simple_golden.json
python/src/opengin/: cli.py
python/src/opengin/server/: api.py  main.py
python/src/opengin/tracer/: cli.py  main.py  schema.py
python/src/opengin/tracer/agents/: aggregator.py  exporter.py  orchestrator.py  scanner.py
python/src/opengin/tracer/services/: gemini.py
python/tests/: conftest.py  test_agents.py  test_api_security.py  test_cli.py  test_fs_manager.py  test_gemini_service.py  test_graphql.py  test_integration.py  test_orchestrator.py  test_server.py
python/ui/: Makefile  README.md  package-lock.json  package.json
python/ui/src/app/: globals.css  page.module.css  page.tsx
python/ui/src/components/: Configuration.module.css  Configuration.tsx  Results.module.css  Results.tsx  Upload.module.css  Upload.tsx
(+100 files in other folders)
